# pfapack

./: CHANGELOG.md  README.md  meson.build  pyproject.toml
.github/workflows/: build_wheels.yml  pre-commit.yaml  pytest.yml
original_source/c_interface/: pfapack.h  skpfa_batched.c
pfapack/: ctypes.py  pfaffian.py
tests/: test_ctypes_batched.py  test_pfaffian.py
