[build-system]
build-backend = "mesonpy"
requires = ["meson-python", "setuptools_scm"]

[project]
name = "pfapack"
description = "Efficient numerical computation of the Pfaffian for dense and banded skew-symmetric matrices."
requires-python = ">=3.10"
dynamic = ["version"]
authors = [
    # Packing author
    { name = "Bas Nijholt", email = "bas@nijho.lt" },
    # Code author
    { name = "Michael Wimmer", email = "m.t.wimmer@tudelft.nl" },
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["scipy", "numpy"]

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser", "sphinxcontrib.apidoc"]
dev = ["pre-commit"]
test = ["pytest", "pytest-cov", "pytest-mypy", "tox"]

[project.urls]
homepage = "https://github.com/basnijholt/pfapack"
repository = "https://github.com/basnijholt/pfapack"
documentation = "https://pfapack.readthedocs.io"

[project.readme]
content-type = "text/markdown"
file = "README.md"

[tool.mypy]
python_version = "3.10"
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
addopts = """
    --durations=5
    --cov
    --cov=pfapack
    --cov-fail-under=30
    --cov-report=term-missing
    --cov-report=xml
    --import-mode=importlib
"""
norecursedirs = ["docs"]

[tool.coverage.run]
branch = true
parallel = true
source = ["pfapack"]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.cibuildwheel]
before-build = "pip install meson-python"
test-extras = ["test"]
test-command = "pytest --import-mode=importlib {package}/tests"
skip = [
    "pp*",          # Skip PyPy wheels
    "*-win32",      # Skip 32-bit Windows
    "*_i686",       # Skip 32-bit manylinux
    "*_s390x",      # Skip s390x manylinux
    "*-musllinux*", # Skip any musllinux wheels (couldn't get OpenBLAS to install)
    "cp36-*",       # Skip Python 3.6
    "cp37-*",       # Skip Python 3.7
    "cp38-*",       # Skip Python 3.8
    "cp39-*",       # Skip Python 3.9
]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel meson-python"
# Bundle OpenBLAS and the MinGW runtime DLLs into the wheel so that installing
# from PyPI works without MSYS2. --analyze-existing is required because the
# pfapack libraries are plain DLLs loaded via ctypes, not extension modules,
# which delvewheel would otherwise not scan for dependencies.
# --ignore-existing stops delvewheel from treating the intra-wheel dependency
# of libcpfapack.dll on libpfapack.dll as missing; it resolves at runtime from
# the package directory.
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel} --add-path C:/msys64/mingw64/bin --analyze-existing --ignore-existing"

[tool.cibuildwheel.linux]
# manylinux2014's glibc 2.17 is too old to install current scipy wheels
# (manylinux_2_27+) in the test environment, forcing a doomed source build
manylinux-x86_64-image = "manylinux_2_28"
before-all = "yum install -y openblas-devel"
